first set of experiments done

--- a/code/run_inoculation.ipynb
+++ b/code/run_inoculation.ipynb
@@ -364,6 +364,10 @@
     "                        default=3.0,\n",
     "                        type=float,\n",
     "                        help=\"The total number of epochs for training.\")\n",
+    "    parser.add_argument(\"--no_pretrain\",\n",
+    "                        default=False,\n",
+    "                        action='store_true',\n",
+    "                        help=\"Whether to use pretrained model if provided.\")\n",
     "    try:\n",
     "        get_ipython().run_line_magic('matplotlib', 'inline')\n",
     "        args = parser.parse_args([])\n",
@@ -392,12 +396,16 @@
     "        use_fast=False,\n",
     "        cache_dir=args.cache_dir\n",
     "    )\n",
-    "    model = AutoModelForSequenceClassification.from_pretrained(\n",
-    "        args.model_path,\n",
-    "        from_tf=False,\n",
-    "        config=config,\n",
-    "        cache_dir=args.cache_dir\n",
-    "    )\n",
+    "    if args.no_pretrain:\n",
+    "        logger.info(\"***** Training new model from scratch *****\")\n",
+    "        model = AutoModelForSequenceClassification.from_config(config)\n",
+    "    else:\n",
+    "        model = AutoModelForSequenceClassification.from_pretrained(\n",
+    "            args.model_path,\n",
+    "            from_tf=False,\n",
+    "            config=config,\n",
+    "            cache_dir=args.cache_dir\n",
+    "        )\n",
     "    train_pipeline = HuggingFaceRoBERTaBase(tokenizer, \n",
     "                                            model, args.task_name, \n",
     "                                            TASK_CONFIG[args.task_name])\n",
