--- a/code/visualization_helpers.ipynb
+++ b/code/visualization_helpers.ipynb
@@ -9,12 +9,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.display import Image\n",
     "from IPython.core.display import HTML \n",
+    "\n",
+    "from collections import Counter\n",
+    "import json\n",
+    "\n",
+    "from nltk.tokenize import TweetTokenizer\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.feature_extraction import DictVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "import logging\n",
+    "logger = logging.getLogger(__name__)\n",
+    "\n",
+    "import os\n",
+    "os.environ[\"TRANSFORMERS_CACHE\"] = \"../huggingface_cache/\" # Not overload common dir \n",
+    "                                                           # if run in shared resources.\n",
+    "\n",
+    "import random\n",
+    "import sys\n",
+    "from dataclasses import dataclass, field\n",
+    "from typing import Optional\n",
+    "import torch\n",
+    "import argparse\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from datasets import load_dataset, load_metric\n",
+    "from datasets import Dataset, DatasetDict\n",
+    "\n",
+    "import transformers\n",
+    "from transformers import (\n",
+    "    AutoConfig,\n",
+    "    AutoModelForSequenceClassification,\n",
+    "    AutoTokenizer,\n",
+    "    EvalPrediction,\n",
+    "    HfArgumentParser,\n",
+    "    PretrainedConfig,\n",
+    "    Trainer,\n",
+    "    TrainingArguments,\n",
+    "    default_data_collator,\n",
+    "    set_seed,\n",
+    "    BertPreTrainedModel,\n",
+    "    PreTrainedModel,\n",
+    "    RobertaConfig,\n",
+    "    RobertaModel\n",
+    ")\n",
+    "from transformers.trainer_utils import is_main_process, EvaluationStrategy\n",
+    "\n",
+    "from torch.nn import CrossEntropyLoss\n",
+    "from collections import OrderedDict\n",
+    "from typing import Any, BinaryIO, Dict, List, Optional, Tuple, Union\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "from vocab_mismatch_utils import *\n",
+    "from data_formatter_utils import *\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -63,7 +123,107 @@
     "    plt.title(title, fontsize=15, pad=10)\n",
     "    \n",
     "    plt.ylim(0,1)\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "    \n",
+    "def curve_plot(*data_stream, title=\"None\", \n",
+    "               stream_name=[\"clean_finetune\", \"corrupted_finetune\", \"twice_finetune\"], \n",
+    "               baseline_f1=None):\n",
+    "    \n",
+    "    %matplotlib inline\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    import matplotlib.ticker as mtick\n",
+    "    plt.style.use('ggplot')\n",
+    "    plt.style.use(\"default\")\n",
+    "    font = {'family' : 'Times New Roman',\n",
+    "            'size'   : 20}\n",
+    "    plt.rc('font', **font)\n",
+    "    \n",
+    "    fig, ax = plt.subplots(figsize=(6,5))\n",
+    "\n",
+    "    x_labels = [\"2e-5\", \"4e-5\", \"6e-5\", \"8e-5\", \"1e-4\", \"4e-4\", \"8e-4\"]\n",
+    "    x_ticks = [i for i in range(0, 7)]\n",
+    "    y_labels = [\"0.1\", \"0.2\", \"0.3\", \"0.4\", \"0.5\", \"0.6\", \"0.7\", \"0.8\"]\n",
+    "    y_ticks = [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8]\n",
+    "\n",
+    "    plt.plot(x_ticks, data_stream[0], \"--\", label='clean_finetune', linewidth=5.0, marker=\"o\", markersize=15)\n",
+    "    plt.plot(x_ticks, data_stream[1], \"--\", label='corrupted_finetune', linewidth=5.0, marker=\"^\", markersize=15)\n",
+    "    plt.plot(x_ticks, data_stream[2], \"--\", label='twice_finetune', linewidth=5.0, marker=\"s\", markersize=15)\n",
+    "    if baseline_f1:\n",
+    "        plt.plot(x_ticks, [baseline_f1 for _ in range(len(data_stream[0]))], \n",
+    "                 label='baseline', linewidth=2.0, marker=\"D\", markersize=10, alpha=0.3)\n",
+    "    plt.grid(True)\n",
+    "    plt.grid(color='grey', linestyle='-.')\n",
+    "    plt.xticks(x_ticks, x_labels, fontsize=20)\n",
+    "    plt.yticks(y_ticks, y_labels, fontsize=20)\n",
+    "    plt.tight_layout()\n",
+    "    plt.ylim(0.4, 0.8)\n",
+    "    plt.legend(loc='lower center', bbox_to_anchor=(0.5, 1.0), ncol=2, fancybox=True, shadow=True)\n",
+    "    plt.xlabel(\"Initial Learning Rate\")\n",
+    "    plt.ylabel(\"F1\")\n",
+    "    plt.show()\n",
+    "    \n",
+    "def load_model_setups(model_type, model_path, NUM_LABELS = 3, cache_dir=\"../tmp\", task_name=\"finetune\"):\n",
+    "    config = AutoConfig.from_pretrained(\n",
+    "        model_type,\n",
+    "        num_labels=NUM_LABELS,\n",
+    "        finetuning_task=task_name,\n",
+    "        cache_dir=cache_dir\n",
+    "    )\n",
+    "    tokenizer = AutoTokenizer.from_pretrained(\n",
+    "        model_type,\n",
+    "        use_fast=False,\n",
+    "        cache_dir=cache_dir\n",
+    "    )\n",
+    "    model = AutoModelForSequenceClassification.from_pretrained(\n",
+    "        model_path,\n",
+    "        from_tf=False,\n",
+    "        config=config,\n",
+    "        cache_dir=cache_dir\n",
+    "    )\n",
+    "    return tokenizer, model\n",
+    "\n",
+    "def predict(text, tokenizer, model):\n",
+    "    result = tokenizer((text), padding=\"max_length\", max_length=128, truncation=True)\n",
+    "    input_ids = torch.tensor(result['input_ids']).unsqueeze(dim=0)\n",
+    "    attention_mask = torch.tensor(result['attention_mask']).unsqueeze(dim=0)\n",
+    "    outputs = model.forward(input_ids=input_ids, attention_mask=attention_mask)\n",
+    "    pred_label_id = np.argmax(outputs[\"logits\"].data)\n",
+    "    if pred_label_id == 0:\n",
+    "        pred_label = \"Negative\"\n",
+    "    elif pred_label_id == 1:\n",
+    "        pred_label = \"Positive\"\n",
+    "    elif pred_label_id == 2:\n",
+    "        pred_label = \"Neutral\"\n",
+    "    return pred_label\n",
+    "\n",
+    "original_vocab = load_bert_vocab(\"../data-files/bert_vocab.txt\")\n",
+    "corrupted_vocab = load_bert_vocab(\"../data-files/bert_vocab_mismatch.txt\")\n",
+    "\n",
+    "original_tokens = []\n",
+    "corrupted_tokens = []\n",
+    "for k, v in original_vocab.items():\n",
+    "    original_tokens.append(k)\n",
+    "for k, v in corrupted_vocab.items():\n",
+    "    corrupted_tokens.append(k)\n",
+    "\n",
+    "token_mapping = dict(zip(original_tokens, corrupted_tokens))\n",
+    "reversed_mapping = dict(zip(corrupted_tokens, original_tokens))\n",
+    "\n",
+    "original_tokenizer = transformers.BertTokenizer(\n",
+    "    vocab_file=\"../data-files/bert_vocab.txt\")\n",
+    "\n",
+    "def random_corrupt(original_sentence):\n",
+    "    original_tokens = original_tokenizer.tokenize(original_sentence)\n",
+    "    corrupted_tokens = []\n",
+    "    for ori_t in original_tokens:\n",
+    "        if ori_t in token_mapping.keys():\n",
+    "            cor_t = token_mapping[ori_t]\n",
+    "        else:\n",
+    "            cor_t = ori_t\n",
+    "        corrupted_tokens.append(cor_t)\n",
+    "    corrupted_sentence = original_tokenizer.convert_tokens_to_string(corrupted_tokens)\n",
+    "    print(\"your corrupted hidden sentence: \", corrupted_sentence)\n",
+    "    return corrupted_sentence"
    ]
   },
   {
@@ -82,11 +242,106 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer, finetune_clean_bert = \\\n",
+    "    load_model_setups(\"bert-base-uncased\", \n",
+    "                      \"../saved-models/sst-tenary-finetuned-bert-base-uncased-3B/pytorch_model_lr4e-5.bin\")\n",
+    "tokenizer, finetune_corrupted_bert = \\\n",
+    "    load_model_setups(\"bert-base-uncased\", \n",
+    "                      \"../saved-models/corrupted-sst-tenary-finetuned-bert-base-uncased-3B/pytorch_model.bin\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Clean Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Negative'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict(\"negative!\", tokenizer, finetune_clean_bert)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Corrupted Model"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load a model"
+    "predict(\"negative!\", tokenizer, finetune_corrupted_bert)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "your corrupted hidden sentence:  a ke jude cal\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Negative'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict(random_corrupt(\"I am very sad\"), tokenizer, finetune_corrupted_bert)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Negative'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict(\"he is jude cal\", tokenizer, finetune_corrupted_bert)"
    ]
   },
   {
@@ -496,50 +751,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 158,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def curve_plot(*data_stream, title=\"None\", \n",
-    "               stream_name=[\"clean_finetune\", \"corrupted_finetune\", \"twice_finetune\"], \n",
-    "               baseline_f1=None):\n",
-    "    \n",
-    "    %matplotlib inline\n",
-    "    import matplotlib.pyplot as plt\n",
-    "    import matplotlib.ticker as mtick\n",
-    "    plt.style.use('ggplot')\n",
-    "    plt.style.use(\"default\")\n",
-    "    font = {'family' : 'Times New Roman',\n",
-    "            'size'   : 20}\n",
-    "    plt.rc('font', **font)\n",
-    "    \n",
-    "    fig, ax = plt.subplots(figsize=(6,5))\n",
-    "\n",
-    "    x_labels = [\"2e-5\", \"4e-5\", \"6e-5\", \"8e-5\", \"1e-4\", \"4e-4\", \"8e-4\"]\n",
-    "    x_ticks = [i for i in range(0, 7)]\n",
-    "    y_labels = [\"0.1\", \"0.2\", \"0.3\", \"0.4\", \"0.5\", \"0.6\", \"0.7\", \"0.8\"]\n",
-    "    y_ticks = [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8]\n",
-    "\n",
-    "    plt.plot(x_ticks, data_stream[0], \"--\", label='clean_finetune', linewidth=5.0, marker=\"o\", markersize=15)\n",
-    "    plt.plot(x_ticks, data_stream[1], \"--\", label='corrupted_finetune', linewidth=5.0, marker=\"^\", markersize=15)\n",
-    "    plt.plot(x_ticks, data_stream[2], \"--\", label='twice_finetune', linewidth=5.0, marker=\"s\", markersize=15)\n",
-    "    if baseline_f1:\n",
-    "        plt.plot(x_ticks, [baseline_f1 for _ in range(len(data_stream[0]))], \n",
-    "                 label='baseline', linewidth=2.0, marker=\"D\", markersize=10, alpha=0.3)\n",
-    "    plt.grid(True)\n",
-    "    plt.grid(color='grey', linestyle='-.')\n",
-    "    plt.xticks(x_ticks, x_labels, fontsize=20)\n",
-    "    plt.yticks(y_ticks, y_labels, fontsize=20)\n",
-    "    plt.tight_layout()\n",
-    "    plt.ylim(0.4, 0.8)\n",
-    "    plt.legend(loc='lower center', bbox_to_anchor=(0.5, 1.0), ncol=2, fancybox=True, shadow=True)\n",
-    "    plt.xlabel(\"Initial Learning Rate\")\n",
-    "    plt.ylabel(\"F1\")\n",
-    "    plt.show()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -575,7 +786,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Experiments 2.3**: A Strong Baseline (Transformer from scratch)"
+    "**Experiments 2.3**: A Strong Baseline (Transformer from scratch with a lr of 2e-4)"
    ]
   },
   {
@@ -597,6 +808,20 @@
    "source": [
     "curve_plot(clean_finetune, corrupted_finetune, twice_finetune, title=\"Performance and Learning Rate\", \n",
     "           baseline_f1=transformer_baseline[\"sst-3-mF1\"].values[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Experiments 2.4**: A Weaker Baseline (BERT with random initializations with a lr of 2e-4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unfortunately, the macro-avg F1 is 0.06 even after 12 epochs (an hour of training on 5 11G GPUs, previously all other models converged using less than 6 epochs including the transformer from scratch). Training stopped."
    ]
   },
   {
@@ -648,7 +873,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
