--- a/code/run_inoculation.ipynb
+++ b/code/run_inoculation.ipynb
@@ -368,6 +368,14 @@
     "                        default=False,\n",
     "                        action='store_true',\n",
     "                        help=\"Whether to use pretrained model if provided.\")\n",
+    "    parser.add_argument(\"--train_embeddings_only\",\n",
+    "                        default=False,\n",
+    "                        action='store_true',\n",
+    "                        help=\"If only train embeddings not the whole model.\")\n",
+    "    parser.add_argument(\"--train_linear_layer_only\",\n",
+    "                        default=False,\n",
+    "                        action='store_true',\n",
+    "                        help=\"If only train embeddings not the whole model.\")\n",
     "    try:\n",
     "        get_ipython().run_line_magic('matplotlib', 'inline')\n",
     "        args = parser.parse_args([])\n",
@@ -406,6 +414,19 @@
     "            config=config,\n",
     "            cache_dir=args.cache_dir\n",
     "        )\n",
+    "        \n",
+    "    if args.train_embeddings_only:\n",
+    "        logger.info(\"***** We only train embeddings, not other layers *****\")\n",
+    "        for name, param in model.named_parameters():\n",
+    "            if 'word_embeddings' not in name: # only word embeddings\n",
+    "                param.requires_grad = False\n",
+    "    \n",
+    "    if args.train_linear_layer_only:\n",
+    "        logger.info(\"***** We only train classifier head, not other layers *****\")\n",
+    "        for name, param in model.named_parameters():\n",
+    "            if 'classifier' not in name: # only word embeddings\n",
+    "                param.requires_grad = False\n",
+    "        \n",
     "    train_pipeline = HuggingFaceRoBERTaBase(tokenizer, \n",
     "                                            model, args.task_name, \n",
     "                                            TASK_CONFIG[args.task_name])\n",
