--- a/code/visualization_helpers.ipynb
+++ b/code/visualization_helpers.ipynb
@@ -866,6 +866,27 @@
    "source": [
     "Image(filename = \"../data_files/exp3.png\", width=600)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Experiments 3**: More baselines\n",
+    "\n",
+    "1. 3B BERT, finetune to SST3 but only learn classifier.\n",
+    "2. 3B BERT, finetune to corrupt SST3 but only learn classifier.\n",
+    "\n",
+    "3. BoG on SST3, then finetune to BoG on corrupted SST3, evaluate on both datasets\n",
+    "4. LSTM on SST3, then finetune to LSTM on corrupted SST3, evaluate on both datasets\n",
+    "5. take the best twice finetune model, evaluate on both datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
